--- a/css/mycss.css
+++ b/css/mycss.css
@@ -62,6 +62,7 @@ h2 {
 section{
     margin: 0 auto;
 }
+
 .container {
     width: 1140px;
     margin: 0 auto;
@@ -109,7 +110,44 @@ section{
     font-size: 20px;
     font-family: 'Playfair Display', serif;
 }
+.form-group {
+    margin-bottom: 20px;
+}
 
+.form-control{
+    width: 100%;
+    background-color: #fff;
+    border: 1px solid #ddd;
+    height: 30px;
+    padding: 13px;
+    font-family: "Open Sans", sans-serif;
+}
+
+
+.btn {
+    padding: 10px 20px;
+    border: none;
+    display: inline-block;
+    font-family: "Open Sans", sans-serif;
+    border-radius: 5px;
+}
+
+.btn-lg {
+    padding: 17px 30px;
+}
+
+.btn-primary {
+    background-color: #39c9da;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 16px;
+    font-weight: 600;
+    transition: .5s;
+}
+
+.btn-primary:hover {
+    background-color: #046d79;
+}
 /* Change color on hover */
 
 
