--- a/css/mycss.css
+++ b/css/mycss.css
@@ -97,7 +97,10 @@ section{
     height: 575px;
 
 }
-
+.row {
+    overflow: auto;
+    margin-bottom: 70px;
+}
 .left img {
     width: 80%;
     border: 2px solid #000000;
@@ -224,7 +227,7 @@ a {
     margin-bottom: 30px;
 
 }
-.row {
+.from-row {
     overflow: visible;
     margin-bottom: 70px;
 }
