register validation css updated but main function needs to be updated
Co-Authored-By: Kazishayem <43824283+Kazishayem@users.noreply.github.com>

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -128,7 +128,10 @@ section{
 }
 
 #msg{
-    color: #48ff00;
+    color: #22570e;
+}
+#error {
+    color: #ff0000;
 }
 .btn {
     padding: 10px 20px;
