--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,900&display=swap');
 body {
     margin: 1%;
-    background-color:#3aafa9;
+    background-color: #39a7e6c4;
     text-align: center;
     
     
 }
 h1 {
     text-align: center;
-    color:#17252a;
+    color:#1d3557;
     font-size: 150%;
     text-align: center;
     text-transform: uppercase;
@@ -16,15 +16,12 @@ h1 {
 }
 h2 {
     text-align: center;
-    color: #17252a;
+    color:#1d3557;
     font-size: 150%;
     font-family: "Times New Roman", Times, serif;
 
 }
-a {
-    font-family: "Times New Roman", Times, serif;
-    font-size: 15px;
-}
+
 
 nav {
     text-align: center;
@@ -34,8 +31,8 @@ nav a {
     display: inline-block;
     text-decoration: none;
     font-size: 150%;
-    background-color: #ebe8e850;
-    color: #000000;
+    background-color: #f1faee;
+    color: #1d3557;
     width: 15%;
     padding: 1%;
     border-radius: 4px;
@@ -43,8 +40,8 @@ nav a {
 }
 
 nav a:hover {
-    background-color: #ffffff;
-    color: #0000ff;
+  background-color: #39a7e6;
+  color: #ffffff;
 }
 
 form {
@@ -63,7 +60,7 @@ section{
 
 }
 .header {
-    background-color: #f2f2f2;
+    background-color: #f1faee;
     padding: 20px;
     text-align: center;
 }
@@ -76,14 +73,14 @@ section{
     width: 80%;
     display: inline-block;
     font-size: 125%;
-    background:#f2f2f2;
+    background:#dfefe6;
     margin-bottom: 2%;
     text-align: left;
     font-family: "Times New Roman", Times, serif;
 
 }
 .left {
-    background-color: #f2f2f2;
+    background-color: #dfefe6;
     padding: 1%;
     width: 15%;
     margin-right: 2%;
@@ -100,22 +97,24 @@ section{
     border: 2px solid #000000;
     margin: 20px 20px 10px 20px;
 }
-.btn {
-    padding: 20px 30px;
-    border: 1px solid #626262;
-    background-color: transparent;
-    font-size: 20px;
-    font-family: 'Playfair Display', serif;
-}
 
 .form-group {
     margin-bottom: 20px;
+    
 }
+.form-pos {
+    width:80%;
+    display: inline-block;
+    font-size: 125%;
+    background: #dfefe6;
+    margin-bottom: 2%;
+    text-align: center;
+    font-family: "Times New Roman", Times, serif;
 
+}
 .form-control{
     width: 100%;
-    background-color: #f2f2f2;
-    border: 1px solid rgba(221, 221, 221, 0.089);
+    border: 2px solid rgba(20, 17, 17, 0.089);
     height: 30px;
     padding: 13px;
     font-family: "Open Sans", sans-serif;
@@ -125,7 +124,7 @@ section{
     color: #22570e;
 }
 #error {
-    color: #ff0000;
+    color: #e01717;
 }
 .btn {
     padding: 10px 20px;
@@ -140,8 +139,8 @@ section{
 }
 
 .btn-primary {
-    background-color: #1c7e79;
-    color: #f2f2f2;
+    background-color: #f1faee;
+    color: #1d3557;
     text-transform: uppercase;
     font-size: 16px;
     font-weight: 600;
@@ -149,8 +148,8 @@ section{
 }
 
 .btn-primary:hover {
-    background-color: #b6dce0;
-    color: #1a1616;
+    background-color: #39a7e6;
+    color: #ffffff;
 }
 /* Change color on hover */
 
@@ -201,19 +200,24 @@ tr:hover td {
 }
 a {
     display: block;
-    background-color: #0C504B;
-    color: #f5f5f5;
+    background-color: #f1faee;
+    color: #1d3557;
     text-align: center;
     padding: 10px 10px;
     text-decoration: none;
     margin: auto;
     margin-bottom: 2%;
     width: 60%;
+      font-family: "Times New Roman",
+      Times,
+      serif;
+      font-size: 15px;
+      font-weight: 600;
     
 }
 a:hover {
-   background-color: #ffffff;
-   color: #15333a;
+    background-color: #39a7e6;
+    color: #ffffff;
 
 }
 /* main */
@@ -247,7 +251,7 @@ a:hover {
 /* main */
 /*footer start*/
 footer {
-    background-color: #f2f2f2d7;
+    background-color: #dfefe6;
     padding: 20px 0;
     
 }
@@ -267,7 +271,7 @@ footer {
 }
 
 .footer-menu li a {
-    color: #368a9c;
+    
     font-size: medium;
     font-weight: bold;
     text-decoration: none;
