Well doing customer and vendor side to side but don't know why the hell $error message is not working

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -102,8 +102,9 @@ section{
     margin-bottom: 20px;
     
 }
-.form-pos {
-    width:80%;
+
+.log-form-pos {
+    width: 40%;
     display: inline-block;
     font-size: 125%;
     background: #dfefe6;
@@ -124,6 +125,12 @@ section{
     color: #22570e;
 }
 #error {
+    color: #e01717;
+}
+#verror {
+    color: #e01717;
+}
+#uerror{
     color: #e01717;
 }
 .btn {
