--- a/css/mycss.css
+++ b/css/mycss.css
@@ -122,7 +122,17 @@ section{
 }
 
 #msg{
+    width: 10%;
     color: #22570e;
+     font-size: 125%;
+     background: #dfefe6;
+     margin: auto;
+     margin-top: 5%;
+     text-align: center;
+     font-family: "Times New Roman",
+     Times,
+     serif;
+     font-weight: 600;
 }
 #error {
     color: #e01717;
