--- a/css/mycss.css
+++ b/css/mycss.css
@@ -130,7 +130,7 @@ section{
 
 #msg{
     width: 10%;
-    color: #22570e;
+    color: #2c7a10;
      font-size: 125%;
      background: #dfefe6;
      margin: auto;
