--- a/css/mycss.css
+++ b/css/mycss.css
@@ -86,6 +86,18 @@ section{
      width: 30%;
 
 }
+.equal {
+  width: 50%;
+  display: inline-block;
+  font-size: 125%;
+  background:#dfefe6;
+  margin-bottom: 2%;
+  text-align: left;
+  font-family: "Times New Roman",
+  Times,
+  serif;
+
+}
 .left {
     background-color: #dfefe6;
     padding: 1%;
